--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-tooltip": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
     "lucide-react": "^0.487.0",
@@ -26,6 +27,7 @@
     "next-themes": "^0.4.6",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
     "recharts": "^2.15.3",
